Corrections before CR.